--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -1,44 +1,44 @@
-<section class="home" ng-controller="HomeCtrl">
+<section class="container-fluid home" ng-controller="HomeCtrl">
 
-<div class="row">
-	
-	<div class="col-xs-6"> 
-	<a href="#">
-		<div class="menu presence">
-			<i class="icon-qrcode"></i>
-			Présence
-		</div>
-	</a>
-	</div>
-	
-	<div class="col-xs-6"> 
-	<a href="agenda">
-		<div class="menu agenda">
-			<i class="icon-calendar"></i>
-				Agenda
-		</div>
-	</a>
-	</div>
-</div>
+    <div class="row top-buffer no-gutter">
 
-<div class="row">
-	<div class="col-xs-6">
-	<a href="trombi">
-		<div class="menu trombi">
-			<i class="icon-wink"></i>
-			Trombi
-		</div>
-	</a>
-	</div>
+        <div class="col-xs-6">
+            <a href="#">
+                <div class="menu presence">
+                    <i class="icon-qrcode"></i>
+                    Présence
+                </div>
+            </a>
+        </div>
 
-	<div class="col-xs-6">
-	<a href="settings">
-		<div class="menu preference">
-			<i class="icon-uniE600"></i>
-			Préférences
-		</div>
-	</a>
-	</div>
-</div>
+        <div class="col-xs-6">
+            <a href="agenda">
+                <div class="menu agenda">
+                    <i class="icon-calendar"></i>
+                    Agenda
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="row top-buffer no-gutter">
+        <div class="col-xs-6">
+            <a href="trombi">
+                <div class="menu trombi">
+                    <i class="icon-wink"></i>
+                    Trombi
+                </div>
+            </a>
+        </div>
+
+        <div class="col-xs-6">
+            <a href="settings">
+                <div class="menu preference">
+                    <i class="icon-uniE600"></i>
+                    Préférences
+                </div>
+            </a>
+        </div>
+    </div>
 
 </section>
