--- a/app/assets/templates/login.html.erb
+++ b/app/assets/templates/login.html.erb
@@ -1,4 +1,4 @@
-<section class="login" ng-controller="LoginCtrl">
+<section class="container-fluid login" ng-controller="LoginCtrl">
         <div class="row">
             <div class="col-xs-6 col-xs-offset-3">
                 <%= image_tag("logo_UCP.jpg", :alt => "Logo UCP", :class => "img-responsive logo-ucp") %>
