--- a/app/assets/templates/trombi.html.erb
+++ b/app/assets/templates/trombi.html.erb
@@ -1,1 +1,15 @@
-Trombi
+<section class="container-fluid trombi" ng-controller="TrombiCtrl">
+    <span class="back"><a href="/"><i class="icon-arrow-left"></i></a></span>
+    <div class="row">
+        <div class="col-xs-12">
+            <h2>Trombi</h2>
+        </div>
+        <div ng-repeat="student in students">
+            <div class="student col-md-2 col-sm-3 col-xs-4">
+                <a href="/trombi/{{student.no_etud}}">
+                    <img src="{{student.picture}}" alt="" class="thumb-picture img-responsive top-buffer">{{student.name}}
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
