--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -1,7 +1,7 @@
 <section class="profile" ng-controller="ProfileCtrl">
     <div class="header">
         <span class="back"><a href="/trombi"><i class="icon-arrow-left"></i></a></span>
-        <img src="{{student.picture}}" alt="" class="thumb-picture img-responsive"><span class="name">{{student.name}}</span>
+        <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Emblem-cool.svg/80px-Emblem-cool.svg.png" alt="" class="thumb-picture img-responsive"><span class="name">{{student.first_name}} {{student.last_name}}</span>
         <br>{{student.formation}}
     </div>
 </section>
