--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -32,9 +32,9 @@
         </div>
 
         <div class="col-xs-6">
-            <a href="settings">
+            <a href="/trombi/28/update">
                 <div class="menu preference">
-                    <i class="icon-uniE600"></i>
+                    <i class="icon-cogs"></i>
                     Préférences
                 </div>
             </a>
