--- a/app/assets/templates/trombi.html.erb
+++ b/app/assets/templates/trombi.html.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid trombi" ng-controller="TrombiCtrl">
    <div ng-show="loading">Chargement ...</div>
-    <span class="back"><a href="/"><i class="icon-arrow-left"></i></a></span>
+    <a href="/" class="button back"><i class="icon-arrow-left"></i></a>
     <div ng-hide="loading" class="row">
         <div class="col-xs-12">
             <h2>Trombi</h2>
