--- a/app/assets/templates/agenda.html.erb
+++ b/app/assets/templates/agenda.html.erb
@@ -1,5 +1,7 @@
 <section class="container-fluid login" ng-controller="AgendaCtrl">
+    <a href="/home" class="button back"><i class="icon-arrow-left"></i></a>
+    <a href="/agenda-admin" ng-show="!isAdmin">Administration</a>
 
-<div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+    <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
  
 </section>
