--- a/app/assets/templates/login.html.erb
+++ b/app/assets/templates/login.html.erb
@@ -8,6 +8,6 @@
         <form action="">
             <input type="text" name="student_id" id="student_id" placeholder="Numero d'étudiant"><br>
             <input type="text" name="password" id="password" placeholder="Mot de passe"><br>
-            <input type="submit" value="Connexion">
+            <input type="submit" value="Connexion" class="btn-large">
         </form>
 </section>
