--- a/app/assets/templates/agenda.html.erb
+++ b/app/assets/templates/agenda.html.erb
@@ -1,5 +1,5 @@
 <section class="container-fluid login" ng-controller="AgendaCtrl">
 
-<div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
+<div  ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
 
 </section>
