--- a/app/assets/templates/agenda.html.erb
+++ b/app/assets/templates/agenda.html.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid login" ng-controller="AgendaCtrl">
     <a href="/home" class="button back"><i class="icon-arrow-left"></i></a>
-    <a href="/agenda-admin" ng-show="!isAdmin">Administration</a>
+    <a href="/agenda-admin" ng-show="isAdmin">Administration</a>
 
 <div  ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
 
