--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -5,7 +5,7 @@
             <a href="#">
                 <div class="menu presence">
                     <i class="icon-qrcode"></i>
-                    Présence
+                    Mon profil
                 </div>
             </a>
         </div>
