--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -117,7 +117,13 @@ textarea:focus {
     margin: 0 auto 0 auto;
 }
 /*Profile*/
-
+.btn2{
+    font-size: 12px;
+    background: white;
+    padding: 2px 8px;
+    border-radius: 4px;
+    color: #ff685f;
+}
 .header {
     background: #ff685f;
     padding: 5% 0;
@@ -151,17 +157,24 @@ textarea:focus {
     color: white;
     font-weight: bold;
 }
-.social-media {
+.informations {
     text-align: left;
 }
-.social-media[class^="icon-"] {
+.social-media [class^="icon-"] {
     display: inline-block;
-    font-size: 1.6em;
-    margin: 0 10px 10px 0;
+    font-size: 3em;
 }
-.social-media p {
+.profile .informations p {
     display: inline-block;
     vertical-align: 3px;
+}
+
+.profile .informations [class^="icon-"] {
+    display: inline-block;
+    font-size: 1.6em;
+    top: 2px;
+    position: relative;
+    right: 6px;
 }
 /*ProfileUpdate*/
 
@@ -172,12 +185,4 @@ button {
 }
 .profile-update h3 {
     text-align: center;
-}
-.profile-update input[type=text],
-.profile-update textarea {
-    margin-bottom: 10px;
-    border: 2px solid #d1d1d1;
-    border-radius: 5px;
-    text-decoration: none;
-    text-indent: 4px;
 }
