--- a/app/assets/templates/profile-update.html.erb
+++ b/app/assets/templates/profile-update.html.erb
@@ -1,10 +1,11 @@
 <section class="profile-update" ng-controller="ProfileUpdateCtrl">
 
     <div class="container-fluid">
-        <a href="/home" class="button back"><i class="icon-arrow-left"></i></a>
+        <a ng-click="back()" class="button back"><i class="icon-arrow-left"></i></a>
+        <span class="btn3 top-left" ng-click="logout()">Déconnexion</span>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <h3>Mettre à jour mes informations</h3>
+                <h4 class="text-center">Mettre à jour<br>mes informations</h4>
                 <form ng-submit="editProfile()">
                     <label for="">Email :</label>
                     <input type="text" class="form-control" ng-model="student.email">
