--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -1,7 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src: url('fonts/icomoon.eot?-gsl7nr');
-    src: url('fonts/icomoon.eot?#iefix-gsl7nr') format('embedded-opentype'), url('fonts/icomoon.woff?-gsl7nr') format('woff'), url('fonts/icomoon.ttf?-gsl7nr') format('truetype'), url('fonts/icomoon.svg?-gsl7nr#icomoon') format('svg');
+    src: url('icomoon.eot?-gsl7nr');
+    src: url('icomoon.eot?#iefix-gsl7nr') format('embedded-opentype'), 
+         url('icomoon.woff?-gsl7nr') format('woff'), 
+         url('icomoon.ttf?-gsl7nr') format('truetype'), 
+         url('icomoon.svg?-gsl7nr#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
