--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -6,3 +6,14 @@
     width: 70%;
     margin: 0 auto;
 }
+
+.admin .agenda-event {
+    width: 800px;
+    float: left;
+}
+
+.admin form {
+    float: left;
+    margin-top: 44px;
+    margin-left: 40px;
+}
