--- a/app/assets/templates/profile.html.erb
+++ b/app/assets/templates/profile.html.erb
@@ -19,13 +19,13 @@
     <div class="container-fluid social-media top-buffer">
         <div class="row">
             <div class="col-xs-8 col-xs-offset-2">                
-                <a ng-show="student.information.facebook" href="{{student.information.facebook}}"><i class="icon-facebook-square"></i></a>
-                <a ng-show="student.information.twitter" href="{{student.information.twitter}}"><i class="icon-twitter-square"></i></a>
-                <a ng-show="student.information.skype" href="{{student.information.skype}}"><i class="icon-skype-square"></i></a>
-                <a ng-show="student.information.google" href="{{student.information.google}}"><i class="icon-google-square"></i></a>
-                <a ng-show="student.information.linkedin" href="{{student.information.linkedin}}"><i class="icon-linkedin-square"></i></a>
-                <a ng-show="student.information.github" href="{{student.information.github}}"><i class="icon-twitter-github"></i></a>
-                <a ng-show="student.information.vine" href="{{student.information.vine}}"><i class="icon-vine"></i></a>
+                <a ng-show="student.information.facebook" href="http://{{student.information.facebook}}" target="_blank"><i class="icon-facebook-square"></i></a>
+                <a ng-show="student.information.twitter" href="http://{{student.information.twitter}}" target="_blank"><i class="icon-twitter-square"></i></a>
+                <a ng-show="student.information.skype" href="http://{{student.information.skype}}" target="_blank"><i class="icon-skype-square"></i></a>
+                <a ng-show="student.information.google" href="http://{{student.information.google}}" target="_blank"><i class="icon-google-square"></i></a>
+                <a ng-show="student.information.linkedin" href="http://{{student.information.linkedin}}" target="_blank"><i class="icon-linkedin-square"></i></a>
+                <a ng-show="student.information.github" href="http://{{student.information.github}}" target="_blank"><i class="icon-twitter-github"></i></a>
+                <a ng-show="student.information.vine" href="http://{{student.information.vine}}" target="_blank"><i class="icon-vine"></i></a>
             </div>
         </div>
     </div>
