--- a/app/assets/stylesheets/admin.css
+++ b/app/assets/stylesheets/admin.css
@@ -7,6 +7,10 @@
     margin: 0 auto;
 }
 
+.content table .present {
+    cursor: pointer;
+}
+
 .admin .agenda-event {
     width: 800px;
     float: left;
