--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all"%>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=devise-width, height=devise-height, initial-scale=1.0 user-scalable=yes">
+  <meta name="viewport" content="width=devise-width, height=devise-height, initial-scale=1.0, user-scalable=yes">
 </head>
 <body ng-app="AngularRails">
 
