--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -34,14 +34,10 @@ a:focus {
 .menu {
     border-radius: 7px;
     padding: 50% 0;
-    height:300px;
-    width: 160px;
+    min-height:300px;
 }
-.home .col-xs-6{
-    width: 180px;
-}
+
 .home .row{
-    width:360px;
     margin:10px auto;
 }
 .presence {
